--- a/haproxy-http-scale/Dockerfile
+++ b/haproxy-http-scale/Dockerfile
@@ -1,8 +1,11 @@
-FROM python:2.7
+#a load balance demo app
+
+FROM python:2.7-alpine
 RUN mkdir /app
 WORKDIR /app
 ADD requirements.txt /app
 ADD app.py /app
+EXPOSE 5000
 RUN pip install -r requirements.txt
 CMD python app.py
 
