--- a/game-stat/influxdb.conf
+++ b/game-stat/influxdb.conf
@@ -1,37 +1,39 @@
-reporting-disabled = true
-#bind-address = ":8088"
-#hostname = ""
-#join = ""
+reporting-disabled = false
+bind-address = "127.0.0.1:8088"
 
 [meta]
   dir = "/var/lib/influxdb/meta"
   retention-autocreate = true
   logging-enabled = true
-  pprof-enabled = false
-  lease-duration = "1m0s"
 
 [data]
   dir = "/var/lib/influxdb/data"
-  engine = "tsm1"
+  index-version = "inmem"
   wal-dir = "/var/lib/influxdb/wal"
-  wal-logging-enabled = true
+  wal-fsync-delay = "0s"
+  validate-keys = false
+  strict-error-handling = false
   query-log-enabled = true
-  cache-max-memory-size = 524288000
+  cache-max-memory-size = 1073741824
   cache-snapshot-memory-size = 26214400
-  cache-snapshot-write-cold-duration = "1h0m0s"
-  compact-full-write-cold-duration = "24h0m0s"
-  max-points-per-block = 0
-  data-logging-enabled = true
+  cache-snapshot-write-cold-duration = "10m0s"
+  compact-full-write-cold-duration = "4h0m0s"
+  compact-throughput = 50331648
+  compact-throughput-burst = 50331648
+  max-series-per-database = 1000000
+  max-values-per-tag = 100000
+  max-concurrent-compactions = 0
+  max-index-log-file-size = 1048576
+  series-id-set-cache-size = 100
+  series-file-max-concurrent-snapshot-compactions = 0
+  trace-logging-enabled = false
+  tsm-use-madv-willneed = false
 
-[cluster]
-  force-remote-mapping = false
-  write-timeout = "5s"
-  shard-writer-timeout = "5s"
-  max-remote-write-connections = 3
-  shard-mapper-timeout = "5s"
+[coordinator]
+  write-timeout = "10s"
   max-concurrent-queries = 0
-  query-timeout = "0"
-  log-queries-after = "0"
+  query-timeout = "0s"
+  log-queries-after = "0s"
   max-select-point = 0
   max-select-series = 0
   max-select-buckets = 0
@@ -45,13 +47,6 @@ reporting-disabled = true
   check-interval = "10m0s"
   advance-period = "30m0s"
 
-[admin]
-  enabled = true
-  bind-address = ":8083"
-  https-enabled = false
-  https-certificate = "/etc/ssl/influxdb.pem"
-  Version = ""
-
 [monitor]
   store-enabled = true
   store-database = "_internal"
@@ -59,22 +54,52 @@ reporting-disabled = true
 
 [subscriber]
   enabled = true
+  http-timeout = "30s"
+  insecure-skip-verify = false
+  ca-certs = ""
+  write-concurrency = 40
+  write-buffer-size = 1000
 
 [http]
   enabled = true
   bind-address = ":8086"
-  auth-enabled = false
+  auth-enabled = true
   log-enabled = true
+  suppress-write-log = false
   write-tracing = false
-  pprof-enabled = false
+  flux-enabled = false
+  flux-log-enabled = false
+  pprof-enabled = true
+  pprof-auth-enabled = false
+  debug-pprof-enabled = false
+  ping-auth-enabled = false
+  prom-read-auth-enabled = false
   https-enabled = false
   https-certificate = "/etc/ssl/influxdb.pem"
-  max-row-limit = 10000
+  https-private-key = ""
+  max-row-limit = 0
+  max-connection-limit = 0
+  shared-secret = ""
+  realm = "InfluxDB"
+  unix-socket-enabled = false
+  unix-socket-permissions = "0777"
+  bind-socket = "/var/run/influxdb.sock"
+  max-body-size = 25000000
+  access-log-path = ""
+  max-concurrent-write-limit = 0
+  max-enqueued-write-limit = 0
+  enqueued-write-timeout = 30000000000
+
+[logging]
+  format = "auto"
+  level = "info"
+  suppress-logo = false
 
 [[graphite]]
   enabled = false
   bind-address = ":2003"
   database = "graphite"
+  retention-policy = ""
   protocol = "tcp"
   batch-size = 5000
   batch-pending = 10
@@ -93,6 +118,9 @@ reporting-disabled = true
   batch-timeout = "10s"
   read-buffer = 0
   typesdb = "/usr/share/collectd/types.db"
+  security-level = "none"
+  auth-file = "/etc/collectd/auth_file"
+  parse-multivalue-plugin = "split"
 
 [[opentsdb]]
   enabled = false
@@ -121,5 +149,9 @@ reporting-disabled = true
 [continuous_queries]
   log-enabled = true
   enabled = true
+  query-stats-enabled = false
   run-interval = "1s"
 
+[tls]
+  min-version = ""
+  max-version = ""
